update git commands

--- a/notes.org
+++ b/notes.org
@@ -3972,6 +3972,54 @@ More: [[https://git-scm.com/book/en/v2/Git-Tools-Rewriting-History][Git Tools - 
 $ git stash
 #+end_src
 
+**** Rebase
+
+#+begin_src shell
+$ git log
+$ git rebase c7cf210cee5c664f8e8169226de4019daf3643b9^ -i
+$ git fetch origin
+$ git rebase origin/master
+# Remove some commits from the history
+#+end_src
+
+**** Clean up changes
+
+#+begin_src shell
+$ git status
+On branch docs-keypair
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git restore <file>..." to discard changes in working directory)
+	modified:   sdk/src/genesis_config.rs
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+	sdk/src/#genesis_config.rs#
+
+no changes added to commit (use "git add" and/or "git commit -a")
+Aimees-MacBook-Pro:solana aimeez$ git clean -df
+#+end_src
+
+**** Ignore local changes
+
+#+begin_src shell
+$ git diff
+diff --git a/sdk/src/genesis_config.rs b/sdk/src/genesis_config.rs
+index 668f5d07b..1da23d35d 100644
+--- a/sdk/src/genesis_config.rs
++++ b/sdk/src/genesis_config.rs
+@@ -296,7 +296,7 @@ mod tests {
+     use super::*;
+     use crate::signature::{Keypair, Signer};
+     use std::path::PathBuf;
+-
++    use tempfile::{tempdir, tempfile, NamedTempFile};
+     fn make_tmp_path(name: &str) -> PathBuf {
+         let out_dir = std::env::var("FARF_DIR").unwrap_or_else(|_| "farf".to_string());
+         let keypair = Keypair::new();
+$ git checkout -f
+#+end_src
+
 **** Cancel hiding
 
 #+begin_src shell
